--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    Container:
+        image: composer:latest
+        volumes: ${{github.wokkspace}}:/app
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
